# WARNING: head commit changed in the meantime
nofiles

--- a/lojavirtiual/src/main/resources/application.properties
+++ b/lojavirtiual/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://186.216.194.36:3307/clientesdb?createDatabase
 spring.datasource.username=root
 spring.datasource.password=ipaicxk3!!
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
