--- a/lojavirtiual/pom.xml
+++ b/lojavirtiual/pom.xml
@@ -9,7 +9,9 @@
   <url>http://maven.apache.org</url>
   
   <properties>
-  	<java.version>1.8</java.version>  
+  	<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>  
   </properties>
   <parent>
   	<groupId>org.springframework.boot</groupId>
@@ -18,10 +20,10 @@
   </parent>
 
   <dependencies>
-    <dependency>
-  	  <groupId>org.springframework.boot</groupId>
-  	  <artifactId>spring-boot-starter-security</artifactId>
-  	</dependency>
+<!--     <dependency> -->
+<!--   	  <groupId>org.springframework.boot</groupId> -->
+<!--   	  <artifactId>spring-boot-starter-security</artifactId> -->
+<!--   	</dependency> -->
   	<dependency>
   	  <groupId>io.springfox</groupId>
   	  <artifactId>springfox-swagger2</artifactId>
