--- a/lojavirtiual/src/main/resources/application.properties
+++ b/lojavirtiual/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=ipaicxk3!!
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jackson.serialization.fail-on-empty-beans=false
+server.port = 8181
+server.servlet.contextPath=/api
+security.basic.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
