--- a/lojavirtiual/src/main/resources/application.properties
+++ b/lojavirtiual/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://186.216.194.36:3307/clientesdb?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=ipaicxk3!!
+spring.datasource.password=XXXXXXXXXX
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.serialization.fail-on-empty-beans=false
